# atsam4-hal

./: Cargo.toml  README.md
src/: adc.rs  chipid.rs  clock.rs  gpio.rs  lib.rs  spi.rs  static_memory_controller.rs  timer.rs  twi.rs
src/udp/: bus.rs  endpoint.rs  mod.rs
src/usb/: bus.rs  mod.rs
